@@ -4835,10 +4835,13 @@
       <page>87</page>
       <bonus>
         <!-- Empty because TODO: add support for showing bonuses to limits of a skill where the limit type isn't known ahead of time -->
-        <selectskill knowledgeskills="False" />
+        <weaponskillaccuracy> <!-- Use weaponskillaccuracy node instead of normal selectskill so that accuracy modifiers are properly applied -->
+          <selectskill knowledgeskills="False" />
+          <value>1</value>
+        </weaponskillaccuracy>
       </bonus>
       <pairbonus>
-        <!-- Though this is a selectskill, the fact that a selectskill exists in the bonus node means the same skill will get forced on this one -->
+        <!-- Though this is a selectskill, the fact that a weaponskillaccuracy with selectskill exists in the bonus node means the same skill will get forced on this one -->
         <selectskill knowledgeskills="False">
           <val>1</val>
         </selectskill>
